# cmake-stm32f0-cmsis

./: README.md  update_vendor.sh
cmake/: stm32-gcc.cmake  stm32f0-cmsis.cmake
example/: CMakeLists.txt  main.c
